build basic components

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- our workflow is managed by the cli and set-up by cli -->
   <app-root></app-root>
 </body>
 </html>
+
+<!-- The application will start at index.html file and kick-start at main.ts, then goes to app.module.ts to find 
+specific features the app is using before rendering in app.component.html in place of index.html -->
